--- a/frontend/src/components/Client/Client.css
+++ b/frontend/src/components/Client/Client.css
@@ -1,10 +1,71 @@
-.form-check-input:checked {
-    background-color: #666 !important;
-    border-color: #6668 !important;
-  }
-
-  .form-check-input:focus {
-    border-color: white !important;
-    outline: 0;
-    box-shadow: none !important;
-  }
+.card.card-default {
+  border: 1px solid black;
+}
+.card.card-error {
+  border: 2px solid red;
+}
+.card.card-unselected {
+  cursor: pointer;
+  border: 1px solid black;
+}
+.card-header.header-custom {
+  background-color: #f8f9fa;
+  padding: 5px;
+  text-align: right;
+}
+.card-body.body-custom {
+  padding: 5px;
+  vertical-align: text-bottom;
+}
+.icon-clickable {
+  cursor: pointer;
+}
+.icon-noclick {
+  cursor: default;
+}
+.sub-custom {
+  height: 4rem;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.card-footer.footer-custom {
+  background-color: #f8f9fa;
+  padding: 5px;
+}
+.div-custom-l {
+  text-align: left;
+}
+.div-custom-r {
+  text-align: right;
+}
+.edit-button {
+  margin: 0;
+  padding: 0;
+  border-width: 0px;
+  background-color: inherit;
+}
+.card-header.header-custom.dark-mode .icon-clickable,
+.card-footer.footer-custom.dark-mode .icon-clickable,
+.card-header.header-custom.dark-mode .icon-noclick,
+.card-footer.footer-custom.dark-mode .icon-noclick {
+  filter: invert(100%);
+}
+.card-global.dark-mode {
+  background-color: #2c2c2c; 
+}
+.card-global.dark-mode .plus-image {
+  filter: invert(80%);
+}
+.card-default.dark-mode {
+  border: 1px solid #898989;
+}
+.card-error.dark-mode {
+  border: 2px solid red;
+}
+.card-unselected.dark-mode {
+  border: 1px solid #898989;
+}
+.header-custom.dark-mode,
+.footer-custom.dark-mode {
+  background-color: #2c2c2c;
+}
