Fix mouse pointer on cards

--- a/frontend/src/components/Client/Client.css
+++ b/frontend/src/components/Client/Client.css
@@ -35,6 +35,9 @@
 .div-custom-l {
   text-align: left;
 }
+.div-custom-l .form-check-input {
+  cursor: pointer;
+}
 .div-custom-r {
   text-align: right;
 }
