--- a/frontend/src/components/Client/Client.css
+++ b/frontend/src/components/Client/Client.css
@@ -72,3 +72,11 @@
 .footer-custom.dark-mode {
   background-color: #2c2c2c;
 }
+.dark-mode .card,
+.dark-mode .card-body,
+.dark-mode .card-subtitle,
+.dark-mode .card-title,
+.dark-mode .card-text,
+.dark-mode .client-card * {
+    color: white !important;
+}
